compiler/src/compile/snapshots/compiler__compile__symtab_visitor__test__symtab_success_snapshot_tests@variable_success.tapir.snap
---
source: crates/tapir-script/compiler/src/compile/symtab_visitor.rs
expression: script
input_file: crates/tapir-script/compiler/src/compile/snapshot_tests/symtab_visitor/variable_success.tapir
---
Script(
  functions: [
    Function(
      name: "@toplevel",
      span: "[span]",
      statements: [
        Statement(
          span: "[span]",
          kind: VariableDeclaration(
            idents: [
              "x",
            ],
            values: [
              Expression(
                span: "[span]",
                kind: Integer(3),
                meta: {},
              ),
            ],
          ),
          meta: {
            "alloc::vec::Vec<compiler::ast::SymbolId>": "[SymbolId(1)]",
          },
        ),
        Statement(
          span: "[span]",
          kind: Assignment(
            idents: [
              "x",
            ],
            values: [
              Expression(
                span: "[span]",
                kind: Integer(4),
                meta: {},
              ),
            ],
          ),
          meta: {
            "alloc::vec::Vec<compiler::ast::SymbolId>": "[SymbolId(1)]",
          },
        ),
        Statement(
          span: "[span]",
          kind: VariableDeclaration(
            idents: [
              "y",
            ],
            values: [
              Expression(
                span: "[span]",
                kind: BinaryOperation(
                  lhs: Expression(
                    span: "[span]",
                    kind: Variable("x"),
                    meta: {
                      "compiler::ast::SymbolId": "SymbolId(1)",
                    },
                  ),
                  operator: Add,
                  rhs: Expression(
                    span: "[span]",
                    kind: Integer(3),
                    meta: {},
                  ),
                ),
                meta: {},
              ),
            ],
          ),
          meta: {
            "alloc::vec::Vec<compiler::ast::SymbolId>": "[SymbolId(2)]",
          },
        ),
      ],
      arguments: [],
      return_types: FunctionReturn(
        types: [],
        span: "[span]",
      ),
      modifiers: FunctionModifiers(
        is_event_handler: None,
      ),
      meta: {
        "compiler::ast::FunctionId": "FunctionId(0)",
      },
    ),
  ],
  extern_functions: [],
)
